# SSYC

./: .clang-format  .gitignore  .gitmodules  0.h  1.cpp  10.h  100.h  101.cpp  11.cpp  12.h  13.cpp  14.h  15.cpp  16.h  17.cpp  18.h  19.cpp  19.h  2.h  20.h  21.cpp  21.h  22.cpp  22.h  23.cpp  23.h  24.cpp  24.h  25.cpp  25.h  26.h  27.cpp  27.h  28.h  29.cpp  29.h  3.cpp  30.h  31.cpp  31.h  (+102 more)
doc/: ARMv7-A.README.md  CodeSpec.md  GENERAL_DESIGN.md  features.md  plan.md  slime-SysY.md  task.md  tutorial.md
include/slime/: Utility.h
include/slime/lang/: ComparePred.h  ContextualConstant.h  DynToken.h  FormattableString.h  Token.h  Type.h
include/slime/utils/: EnumTrait.h  IterableTrait.h  LinkedList.h  TryIntoTrait.h  TypeList.h  Unreachable.h
include/slimec/backend/ARMv7A/: InstrAssign.h  InstrAssign.inl  InstrSet.h  RegFile.h  RegFile.inl
include/slimec/io/: CodeConvert.h  DefaultStreamProvider.h  StreamProvider.h  Utf8OutputHandler.h  Utf8StreamProvider.h
include/slimec/lex/: LexObject.h  TokenParser.h
scripts/: lib.nu  projutils.nu  test_parse.fish  testsuite.nu  utils.nu
src/: CMakeLists.txt  SysY.l  SysY.y  ast.cpp  ast.h  ast_decl.h  ast_utils.h  main.cpp  parser.cpp  parser.h  parser_context.cpp  parser_context.h  pch.h  ssyc.cpp  syntax.h  token.h  utils.cpp  utils.h  utils_conv2py.cpp  utils_conv2py.h  utils_treegraph.cpp  validator.cpp
src/ast/: common.h  decl_impl.h  stmt_decl.h  stmt_impl.h  type_impl.h
src/libslime/: CMakeLists.txt  stdslime.c  stdslime.cpp  stdslime.h
src/slime/: CMakeLists.txt  Makefile  ast.cpp  ast.h  lex.cpp  lex.h  main.cpp  parser.cpp  parser.h  test.txt
src/slime/ast/: ast.h  cast.def  decl.cpp  decl.h  expr.cpp  expr.h  operators.def  scope.h  statements.def  stmt.cpp  stmt.def  stmt.h  type.cpp  type.h
src/slime/backend/: gencode.cpp  gencode.h  instr.cpp  instr.h  regalloc.cpp  regalloc.h
src/slime/driver/: driver.cpp  driver.h  optman.cpp  optman.h
src/slime/experimental/: Utility.h
src/slime/experimental/backend/ARMv7A/: InstrAssign.cpp  InstrAssign.h  InstrAssign.inl  InstrSet.cpp  InstrSet.h  RegFile.cpp  RegFile.h  RegFile.inl
src/slime/experimental/backend/ARMv7a/: InstrAssign.cpp  InstrAssign.h  RegFile.cpp  RegFile.h
src/slime/experimental/io/: CodeConvert.cpp  CodeConvert.h  DefaultStreamProvider.h  StreamProvider.h  Utf8OutputHandler.cpp  Utf8OutputHandler.h  Utf8StreamProvider.h
src/slime/experimental/ir/: CFG.cpp  CFG.h  Instruction.h  Instructions.h  Module.h  Type.cpp  Type.h  Use.h  User.cpp  User.h  Value.cpp  Value.h  Values.cpp  Values.h
src/slime/experimental/utils/: EnumTrait.h  IterableTrait.h  LinkedList.h  TryIntoTrait.h  Unreachable.h
src/slime/ir/: argument.cpp  argument.h  block.h  cfg.cpp  cfg.h  constant.h  instruction.cpp  instruction.def  instruction.h  minimal.cpp  minimal.h  module.cpp  module.h  type.h  use.cpp  user.h  value.cpp  value.h
src/slime/ir/ssa/: use.h  value.h
src/slime/ir/ssa/user/: constant.cpp  constant.h  instruction.h
src/slime/lex/: lex.cpp  lex.h  lexer.h  preproc.cpp  preproc.h  token.h
src/slime/parse/: ast.cpp  ast.h  diagnosis.cpp  diagnosis.h  parser.cpp  parser.h  priority.h
src/slime/pass/: CSE.cpp  CSE.h  ControlFlowSimplification.cpp  ControlFlowSimplification.h  CopyPropagation.cpp  CopyPropagation.h  DeadCodeElimination.cpp  DeadCodeElimination.h  FunctionInlining.cpp  FunctionInlining.h  Mem2Reg.cpp  Mem2Reg.h  MemoryToRegister.cpp  MemoryToRegister.h  Peekhole.cpp  Peekhole.h  PhiElimination.cpp  PhiElimination.h  Resort.cpp  Resort.h  SCCP.cpp  SCCP.h  ValueNumbering.cpp  ValueNumbering.h  minimum.h  pass.h
src/slime/utils/: enum_trait.h  list.h  traits.h  try_into.h
src/slime/visitor/: ASTDumpVisitor.cpp  ASTDumpVisitor.h  ASTExprSimplifier.cpp  ASTExprSimplifier.h  ASTToIRTranslator.cpp  ASTToIRTranslator.h  ASTToIRVisitor.cpp  ASTToIRVisitor.h  IRDumpVisitor.cpp  IRDumpVisitor.h
src/slimec/: CMakeLists.txt
src/slimec/backend/ARMv7A/: InstrAssign.cpp  InstrSet.cpp  RegFile.cpp
src/slimec/io/: CodeConvert.cpp  Utf8OutputHandler.cpp
src/slimec/lex/: TokenParser.cpp
src/ssyc/: SysY.l  SysY.y  ast.cpp  ast.h  ast_utils.h  parser.cpp  parser.h  parser_context.cpp  pch.h  utils_treegraph.cpp  utils_treegraph.h  validator.h
src/ssyc/ast/: ast.h  common.h  concept.h  decl_decl.h  decl_impl.h  expr_decl.h  expr_impl.h  interface.cpp  interface.h  program.h  stmt_impl.h  type_decl.h  type_declare.h  type_impl.h  typedef.h
src/ssyc/ast/impl/: brief_impl.cpp  brief_impl.h  tree_walk_builder_impl.cpp
src/ssyc/ast/type/: base.h  decl.h  expr.h  stmt.h  type.h
src/ssyc/ast/utils/: ctor_helper.h  translate.h  treeview.h
src/ssyc/ir/: builder.h  context.h  genwrap.h  module.cpp  module.h  ssa.h
src/ssyc/lex/: token.h
test/: AstExprCompileTimeEvaluate.cpp  CMakeLists.txt  EnumLookup.cpp  ListTraitOperations.cpp  ast_constrs.cpp  ast_func.cpp  ast_utils.cpp  lib.nu  parse_test.nu  perf.nu  primary_grammer_test.nu  pyconv_test.nu  test_parse.fish  testsuite.nu  utils.nu
test/custom/: foobar.c
test/functional/: 00_main.sy  01_var_defn2.sy  02_var_defn3.sy
test/lib/: sylib.c  sylib.h
test/scripts/: testsuite.nu
test/testcase/: CMakeLists.txt
test/testcase/feature/: 00_ExternFunction.sy  01_ExplicitVoidParams.sy  02_DecayArrayTypeInParams.sy  03_ComplexQualifier.sy  04_ForStatement.sy  05_DoStatement.sy  06_OpSequenceMerge.sy  07_StringLiteral.sy
test/testcase/functional/: 53_scope2.out  65_color.out  79_var_name.out  83_long_array.out  84_long_array2.sy  95_float.sy
test/testcase/optimize/: 00_CopyPropagation.sy  01_FunctionInlining2.sy  01_FunctionInlining3.sy  01_FunctionInlining4.sy
test/unittest/: CMakeLists.txt  EnumLookup.cpp  IRInstruction.cpp  IRType.cpp  ListTraitOperations.cpp
