find_package(fmt REQUIRED)
find_package(glog REQUIRED)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB_RECURSE SOURCE_FILES *.cpp)

add_executable(
	${CMAKE_PROJECT_NAME}
	${SOURCE_FILES}
)

target_link_libraries(
	${CMAKE_PROJECT_NAME}
	PRIVATE fmt::fmt-header-only glog::glog
)

target_include_directories(
	${CMAKE_PROJECT_NAME}
	PUBLIC ${CMAKE_SOURCE_DIR}/include
)

include(GNUInstallDirs)

install(
	TARGETS ${CMAKE_PROJECT_NAME}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
	INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)
